--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:visibility="invisible" />
 
         <Button
-            android:id="@+id/continue"
+            android:id="@+id/practice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/practice"
