--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,31 +11,17 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/right"
-            android:layout_width="match_parent"
-            android:layout_height="128dp"
-            android:text="@string/right"
-            android:visibility="invisible" />
-
-        <TextView
-            android:id="@+id/wrong"
-            android:layout_width="match_parent"
-            android:layout_height="122dp"
-            android:text="@string/wrong"
-            android:visibility="invisible" />
-
         <Button
             android:id="@+id/practice"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="98dp"
             android:text="@string/practice"
             android:visibility="invisible" />
 
         <Button
             android:id="@+id/end"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="94dp"
             android:text="@string/end"
             android:visibility="invisible" />
 
@@ -43,6 +29,7 @@
             android:id="@+id/question"
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:textSize="32sp"
             android:visibility="visible" />
 
         <EditText
@@ -65,5 +52,21 @@
             android:layout_height="wrap_content"
             android:text="@string/done"
             android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/right"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/right"
+            android:textSize="64sp"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/wrong"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/wrong"
+            android:textSize="64sp"
+            android:visibility="invisible" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
