--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,18 +10,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/practice"
+        <TextView
+            android:id="@+id/result"
             android:layout_width="match_parent"
-            android:layout_height="98dp"
-            android:text="@string/practice"
-            android:visibility="invisible" />
-
-        <Button
-            android:id="@+id/end"
-            android:layout_width="match_parent"
-            android:layout_height="94dp"
-            android:text="@string/end"
+            android:layout_height="86dp"
+            android:textColor="#4AC366"
+            android:textSize="36sp"
             android:visibility="invisible" />
 
         <TextView
@@ -38,7 +31,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/your_answer"
-            android:inputType="numberDecimal" />
+            android:inputType="numberSigned|numberDecimal"
+            android:autofillHints="" />
 
         <TextView
             android:id="@+id/tip"
@@ -53,20 +47,26 @@
             android:text="@string/done"
             android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/right"
+        <Button
+            android:id="@+id/practice"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/right"
-            android:textSize="64sp"
+            android:layout_height="98dp"
+            android:text="@string/practice"
             android:visibility="invisible" />
 
-        <TextView
-            android:id="@+id/wrong"
+        <Button
+            android:id="@+id/end"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/wrong"
-            android:textSize="64sp"
+            android:layout_height="94dp"
+            android:text="@string/end"
             android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/rightanswer"
+            android:layout_width="match_parent"
+            android:layout_height="94dp"
+            android:text="@string/rightanswer"
+            android:visibility="invisible" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
